# address_split

./: .gitignore  README.md  restart-dev.bat  restart-dev.ps1
address_back/: mgeo_geographic_elements_tagging_chinese_base.py  mgeo_geographic_where_what_cut_chinese_base.py  pyproject.toml
address_back/app/: main.py
address_back/app/api/: routes.py
address_back/app/core/: config.py
address_back/app/schemas/: address.py
address_back/app/services/: constants.py  db.py  environment_config.py  job_store.py  model_service.py  progress_ws.py  redis_store.py  scene_service.py  split_service.py  task_control.py
address_back/data/: jobs.json  scenes.json
address_back/iic/mgeo_backbone_chinese_base/: .msc  .mv  README.md  configuration.json
address_back/iic/mgeo_geographic_composition_analysis_chinese_base/: .msc  .mv  README.md  configuration.json
address_back/iic/mgeo_geographic_elements_tagging_chinese_base/: .msc  .mv  README.md  config.json  configuration.json
address_back/iic/mgeo_geographic_where_what_cut_chinese_base/: .msc  .mv  README.md  configuration.json  requirements.txt  wwc.tar
address_back/scripts/: sample_split.py
address_web/: index.html  package-lock.json  package.json
address_web/src/: style.css
address_web/src/api/: address.ts
address_web/src/components/: AppSidebar.vue  BaseTable.vue  ColumnSettingsModal.vue  PageHeader.vue  PaginationBar.vue  StatusBadge.vue  TabSwitcher.vue
address_web/src/layouts/: MainLayout.vue
address_web/src/mock/: data.ts
address_web/src/router/: index.ts
address_web/src/types/: index.ts
address_web/src/views/: EnvironmentView.vue  RecordsView.vue  ResultDetailView.vue  ScenesView.vue  SplitView.vue
