[project]
name = "address-back"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "addict==2.4.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.5",
    "aiosignal==1.4.0",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.13.0",
    "attrs==26.1.0",
    "blis==0.7.11",
    "boto3==1.42.96",
    "botocore==1.42.96",
    "catalogue==2.0.10",
    "certifi==2026.4.22",
    "charset-normalizer==3.4.7",
    "click==8.3.3",
    "cloudpathlib==0.16.0",
    "colorama==0.4.6",
    "confection==0.1.5",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "cymem==2.0.13",
    "datasets==4.8.4",
    "dill==0.4.1",
    "einops==0.8.2",
    "embeddings==0.0.8",
    "emoji==2.15.0",
    "et-xmlfile==2.0.0",
    "fastapi==0.136.1",
    "filelock==3.29.0",
    "fonttools==4.62.1",
    "frozenlist==1.8.0",
    "fsspec==2026.2.0",
    "ftfy==6.3.1",
    "h11==0.16.0",
    "hf-xet==1.4.3",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface-hub==0.25.2",
    "idna==3.13",
    "jieba==0.42.1",
    "jinja2==3.1.6",
    "jmespath==1.1.0",
    "joblib==1.5.3",
    "kiwisolver==1.5.0",
    "langcodes==3.5.1",
    "markupsafe==3.0.3",
    "matplotlib==3.10.9",
    "megatron-util==0.1.0",
    "mock==5.2.0",
    "modelscope==1.36.2",
    "mpmath==1.3.0",
    "multidict==6.7.1",
    "multiprocess==0.70.19",
    "murmurhash==1.0.15",
    "networkx==3.6.1",
    "nltk==3.9.4",
    "numpy==2.4.4",
    "openpyxl==3.1.5",
    "packaging==26.2",
    "pandas==3.0.2",
    "pathlib-abc==0.5.2",
    "pathy==0.14.2",
    "pillow==12.1.1",
    "platformdirs==4.9.6",
    "preshed==3.0.13",
    "propcache==0.4.1",
    "protobuf==3.20.3",
    "pyarrow==24.0.0",
    "pydantic==2.13.3",
    "pydantic-core==2.46.3",
    "pyparsing==3.3.2",
    "pythainlp==5.3.4",
    "python-crfsuite==0.9.12",
    "python-dateutil==2.9.0.post0",
    "python-multipart==0.0.27",
    "pyvi==0.1.1",
    "pyyaml==6.0.3",
    "redis==7.4.0",
    "regex==2026.4.4",
    "requests==2.33.1",
    "rouge==1.0.1",
    "s3transfer==0.16.1",
    "sacremoses==0.1.1",
    "safetensors==0.7.0",
    "scikit-learn==1.8.0",
    "scipy==1.17.1",
    "sentencepiece==0.2.1",
    "seqeval==1.2.2",
    "simplejson==4.1.1",
    "six==1.17.0",
    "sklearn-crfsuite==0.5.0",
    "smart-open==6.4.0",
    "sortedcontainers==2.4.0",
    "spacy==3.7.0",
    "spacy-legacy==3.0.12",
    "spacy-loggers==1.0.5",
    "srsly==2.5.3",
    "stanza==1.11.1",
    "starlette==1.0.0",
    "subword-nmt==0.3.8",
    "sympy==1.14.0",
    "tabulate==0.10.0",
    "termcolor==3.3.0",
    "thinc==8.2.4",
    "threadpoolctl==3.6.0",
    "tokenizers==0.21.4",
    "torch==2.7.1+cu118",
    "torchaudio==2.7.1+cu118",
    "torchvision==0.22.1+cu118",
    "tqdm==4.67.3",
    "transformers==4.48.3",
    "typer==0.9.4",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2026.2",
    "udapi==0.5.2",
    "udtools==0.2.7",
    "urllib3==2.6.3",
    "uvicorn==0.46.0",
    "wasabi==1.1.3",
    "wcwidth==0.6.0",
    "weasel==0.3.4",
    "websockets==16.0",
    "xxhash==3.7.0",
    "yarl==1.23.0",
    "zhconv==1.4.3",
]

[tool.uv.sources]
torch = { index = "pytorch-cu118" }
torchaudio = { index = "pytorch-cu118" }
torchvision = { index = "pytorch-cu118" }

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true
